--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                     <div class="col-lg-6">
                         <div class="about-img-wrap">
                             <div class="mask-img-wrap">
-                                <img src="assets/img/images/it-service.jpg" alt="">
+                                <!-- <img src="assets/img/images/it-service.jpg" alt=""> -->
                             </div>
                             <div class="shape">
                                 <img src="assets/img/images/HomeAbout.avif" alt="">
