--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             <div id="carouselExampleCaptions" class="carousel slide">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="assets/img/banner/banner_bg.jpg"alt="...">
+                  <img src="assets/img/banner/banner_bg.jpg"alt="..." >
                   <div class="carousel-caption align-items-start text-md-start">
                     <div class="container">
                         <!-- <div class="row"> -->
@@ -294,10 +294,10 @@
                                     <p data-aos="fade-up" data-aos-delay="400">Apexa helps you to convert your data into a strategic asset and get business insights Apexa helps you to convert your data into asset and get top-notch business insights.</p>
                                     <a class='btn' data-aos-delay='600' data-aos='fade-up' href='about.html'>Read More</a>
                                 </div>
-                                <div class="banner-shape">
+                                <!-- <div class="banner-shape">
                                     <img src="assets/img/banner/banner_shape01.png" alt="" class="rightToLeft">
                                     <img src="assets/img/banner/banner_shape02.png" alt="" class="ribbonRotate">
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                         <div class="banner-social">
@@ -331,10 +331,10 @@
                                     <p data-aos="fade-up" data-aos-delay="400">Apexa helps you to convert your data into a strategic asset and get business insights Apexa helps you to convert your data into asset and get top-notch business insights.</p>
                                     <a class='btn' data-aos-delay='600' data-aos='fade-up' href='about.html'>Read More</a>
                                 </div>
-                                <div class="banner-shape">
+                                <!-- <div class="banner-shape">
                                     <img src="assets/img/banner/banner_shape01.png" alt="" class="rightToLeft">
                                     <img src="assets/img/banner/banner_shape02.png" alt="" class="ribbonRotate">
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                         <div class="banner-social">
@@ -419,7 +419,7 @@
                     <div class="col-lg-6">
                         <div class="about-img-wrap">
                             <div class="mask-img-wrap">
-                                <!-- <img src="assets/img/images/it-service.jpg" alt=""> -->
+                                <img src="assets/img/images/it-service.jpg" alt="">
                             </div>
                             <div class="shape">
                                 <img src="assets/img/images/HomeAbout.avif" alt="">
@@ -679,7 +679,7 @@
                                       
                                         <h2 class="title">NOC ( Network Operation centre )</h2>
                                         <p>Global network and infrastructure monitoring and support services are likewise offered by our 24x7 Global NOC team and Service Desk. Our facilities are open 365 days a year, 24 hours a day, to guarantee that our clients' services are running smoothly.</p>
-                                        <p>We also have certified systems and network engineers working alongside service desk operators in our 24×7  global NOC team. Consequently, our worldwide network operates in a regulated setting and offers stringent protocols for assistance.</p>
+                                        <p>We also have certified systems and network engineers working alongside service desk operators in our 24×7  global NOC team.</p>
                                         <a class='btn' href='services-details-35.html'>Read more</a>
                                     </div>
                                 </div>
