--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                      <div class="container">
                         <div class="row">
                             <div class="col-lg-6">
-                                <div class="banner-content">
+                                <div class="banner-content"> 
                                     <span class="sub-title" data-aos="fade-up" data-aos-delay="0">We Are Expert In This Field</span>
                                     <h2 class="title" data-aos="fade-up" data-aos-delay="200">business Consulting All Solutions</h2>
                                     <p data-aos="fade-up" data-aos-delay="400">Apexa helps you to convert your data into a strategic asset and get business insights Apexa helps you to convert your data into asset and get top-notch business insights.</p>
@@ -419,7 +419,7 @@
                     <div class="col-lg-6">
                         <div class="about-img-wrap">
                             <div class="mask-img-wrap">
-                                <img src="assets/img/images/it-service.jpg" alt="">
+                                <!-- <img src="assets/img/images/it-service.jpg" alt=""> -->
                             </div>
                             <div class="shape">
                                 <img src="assets/img/images/HomeAbout.avif" alt="">
