--- a/index.html
+++ b/index.html
@@ -370,8 +370,8 @@
         <!-- brand-area -->
         <div class="brand-area">
             <div class="container">
-                <div class="swiper-container brand-active">
-                    <div class="swiper-wrapper">
+                <div class="swiper-container brand-active" style="margin-bottom: -60px;">
+                    <div class="swiper-wrapper"  style="transform: translate3d(-1510px, 45px, 0px);transition-duration: 0ms;">
                         <div class="swiper-slide">
                             <div class="brand-item">
                                 <img src="assets/img/brand/amazone.png" alt="">
